📱 CreatureCard for mobile

--- a/src/components/EditAvatar/Details/AvatarDetails.module.scss
+++ b/src/components/EditAvatar/Details/AvatarDetails.module.scss
@@ -3,8 +3,11 @@
 $image-size: 70%;
 
 div.avatar-details {
-  flex: 1;
-  position: relative;
-  display: flex;
-  flex-direction: column;
+    flex: 1;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    &.creature-card {
+        height: 90vh;
+    }
 }
