--- a/src/components/EditAvatar/Details/AvatarDetailsSmallDesktop.module.scss
+++ b/src/components/EditAvatar/Details/AvatarDetailsSmallDesktop.module.scss
@@ -3,10 +3,22 @@
 $image-size: 70%;
 
 div.avatar-details {
-  flex: 1;
-  position: relative;
-  border-radius: 24px;
-  display: flex;
-  justify-content: space-between;
-  overflow: hidden;
+    flex: 1;
+    position: relative;
+    border-radius: 24px;
+    display: flex;
+    justify-content: space-between;
+    overflow: hidden;
+    > div.name-container {
+        position: absolute;
+        top: 24px;
+        left: 24px;
+        padding-bottom: 0;
+        > h2.avatar-name {
+            text-align: left;
+            font-size: 36px;
+            color: var(--bg);
+            margin-block: 0;
+        }
+    }
 }
