💄 Fix Safari mobile UI

--- a/src/components/EditAvatar/Details/AvatarDetails.module.scss
+++ b/src/components/EditAvatar/Details/AvatarDetails.module.scss
@@ -8,6 +8,18 @@ div.avatar-details {
     display: flex;
     flex-direction: column;
     &.creature-card {
-        height: 90vh;
+        height: 100%;
+    }
+    > div.name-container {
+        position: absolute;
+        top: 24px;
+        left: 24px;
+        padding-bottom: 0;
+        > h2.avatar-name {
+            text-align: left;
+            font-size: 36px;
+            color: var(--bg);
+            margin-block: 0;
+        }
     }
 }
