--- a/src/components/EditAvatar/Details/Specs/AvatarSpecs.module.scss
+++ b/src/components/EditAvatar/Details/Specs/AvatarSpecs.module.scss
@@ -15,6 +15,7 @@ div.avatar-specs {
     }
     > p.description {
         color: var(--color-grey);
+        margin-block: 0;
     }
     &.small-desktop {
         border-radius: 24px;
