--- a/src/components/Learn/Learn.module.scss
+++ b/src/components/Learn/Learn.module.scss
@@ -30,7 +30,7 @@ div.learn {
 }
 
 @media screen and (max-width: 1170px) {
-    div.edit-avatar {
+    div.learn {
         flex-direction: column;
         > div.right {
             margin-top: 0;
@@ -46,7 +46,7 @@ div.learn {
 }
 
 @media screen and (min-width: 1440px) {
-    div.edit-avatar {
+    div.learn {
         > div.right {
             flex: 2;
         }
