--- a/src/components/Learn/Details/ImageContainer/ImageContainer.module.scss
+++ b/src/components/Learn/Details/ImageContainer/ImageContainer.module.scss
@@ -13,7 +13,7 @@ div.image-container {
         text-align: left;
         font-size: 36px;
         margin-block: 0;
-        color: transparent;
+        color: var(--bg);
     }
     h3.avatar-id {
         text-align: left;
