🚧 WIP: prepare previous and next

--- a/src/components/Learn/CreatureCard/CreatureCard.module.scss
+++ b/src/components/Learn/CreatureCard/CreatureCard.module.scss
@@ -1,3 +1,7 @@
-.creature-card {
+dialog.creature-card-modal-dialog {
     border-radius: 24px;
+    div.creature-card-wrapper {
+        height: 100%;
+        display: flex;
+    }
 }
