--- a/src/components/Home/HomeOption.module.scss
+++ b/src/components/Home/HomeOption.module.scss
@@ -23,9 +23,13 @@ a.home-option {
 
 @media screen and (max-width: 768px) {
     a.home-option {
-        &:first-child,
+        &:first-child {
+            border-right: solid 2px pink;
+            border-bottom: none;
+            border-radius: 16px 16px 0 0;
+        }
         &:nth-child(2) {
-            border-radius: 16px;
+            border-radius: 0 0 16px 16px;
         }
     }
 }
