--- a/src/components/Quiz/QuizView.module.scss
+++ b/src/components/Quiz/QuizView.module.scss
@@ -50,6 +50,7 @@ div.quiz-view {
         display: flex;
         flex-direction: column;
         height: 100%;
+        gap: 24px;
         div.message {
             flex: 1;
             display: flex;
