--- a/src/components/Home/HomeOption.module.scss
+++ b/src/components/Home/HomeOption.module.scss
@@ -1,3 +1,5 @@
+@import "@/mixins.scss";
+
 a.home-option {
     flex: 1;
     display: flex;
@@ -8,28 +10,34 @@ a.home-option {
     text-transform: uppercase;
     font-size: var(--font-size-xxlarge);
     &:first-child {
-        border: solid 2px pink;
+        border: solid 2px var(--color-medium-grey);
         border-right: none;
         border-radius: 16px 0 0 16px;
     }
     &:nth-child(2) {
-        background-color: pink;
+        background-color: var(--color-medium-grey);
         border-radius: 0 16px 16px 0;
     }
-    > img {
+    div.image-container {
+        @include background-image-component;
+        background-color: transparent;
         width: 50%;
+        height: 30vh;
     }
 }
 
 @media screen and (max-width: 768px) {
     a.home-option {
         &:first-child {
-            border-right: solid 2px pink;
+            border-right: solid 2px var(--color-medium-grey);
             border-bottom: none;
             border-radius: 16px 16px 0 0;
         }
         &:nth-child(2) {
             border-radius: 0 0 16px 16px;
+        }
+        div.image-container {
+            height: 20vh;
         }
     }
 }
