--- a/src/components/Learn/CreatureCard/CreatureCard.module.scss
+++ b/src/components/Learn/CreatureCard/CreatureCard.module.scss
@@ -3,5 +3,6 @@ dialog.creature-card-modal-dialog {
     div.creature-card-wrapper {
         height: 100%;
         display: flex;
+        position: relative;
     }
 }
