🧹 Remove arrows for Mobile

--- a/src/components/Learn/CreatureCard/CreatureCard.module.scss
+++ b/src/components/Learn/CreatureCard/CreatureCard.module.scss
@@ -5,7 +5,7 @@ dialog.creature-card-modal-dialog {
         display: flex;
         position: relative;
         transition: left 0.2s ease-in-out;
-        // justify-content: center;
+        justify-content: center;
     }
 }
 
