--- a/src/components/Learn/CreatureCard/CreatureCard.module.scss
+++ b/src/components/Learn/CreatureCard/CreatureCard.module.scss
@@ -4,16 +4,15 @@ dialog.creature-card-modal-dialog {
         height: 100%;
         display: flex;
         position: relative;
-        transition: left 0.2s ease-in-out;
-        justify-content: center;
+        // justify-content: center;
     }
 }
 
 @media screen and (max-width: 768px) {
     dialog.creature-card-modal-dialog {
         overflow-x: auto !important;
-        scroll-snap-coordinate: 0 0;
-        scroll-snap-points-x: repeat(100%);
+        // scroll-snap-coordinate: 0 0;
+        // scroll-snap-points-x: repeat(100%);
         scroll-snap-type: x mandatory;
         -ms-overflow-style: none; /* Internet Explorer 10+ */
         scrollbar-width: none; /* Firefox */
