✨ Do not close CreatureCard on click but add close button

--- a/src/assets/Ball.module.scss
+++ b/src/assets/Ball.module.scss
@@ -4,4 +4,8 @@ svg.ball {
     left: 50%;
     right: 16px;
     pointer-events: none;
+    &.on-right {
+        right: 50%;
+        left: 16px;
+    }
 }
