--- a/src/assets/CloseIcon.module.scss
+++ b/src/assets/CloseIcon.module.scss
@@ -1,10 +1,8 @@
 svg.close-icon {
-    width: 1.2rem;
-    position: absolute;
-    right: 1rem;
+    width: 1.8rem;
     cursor: pointer;
     transition: fill 0.1s;
     &:hover {
-        fill: var(--color-primary-5);
+        fill: var(--bg);
     }
 }
