💄 Fix HomeButton color

--- a/src/components/Learn/Learn.module.scss
+++ b/src/components/Learn/Learn.module.scss
@@ -6,7 +6,7 @@ div.learn {
     width: 100%;
     gap: 24px;
     position: relative;
-    > a.back-button {
+    > a.home-button {
         position: absolute;
         top: 0;
         right: 0;
