--- a/src/components/Quiz/QuizView.module.scss
+++ b/src/components/Quiz/QuizView.module.scss
@@ -6,7 +6,7 @@ div.quiz-view {
     height: 100dvh;
     overflow: hidden;
     position: relative;
-    > a.back-button {
+    > a.home-button {
         position: absolute;
         top: 24px;
         right: 24px;
