Swipe left and right on mobile when learning (#38)
* 🚧 WIP: prepare previous and next

* 🚧 Temp Home button

* 🚧 Prepare swipe

* 🎨 Refactor

* 🚧 WIP Next & Previous

* 🎨 Refactor and loop

* 🐛 Optimize next

* 💩 Test swipe

* 💩 Test

* 🐛 Sync when creature changes

* 💩 Try something

* 🐛 Fix selected Creature

* ⚡️ Try swipe

* 🎨 Scroll snap

* 💩 Log on touch

* 🔊 Add logs

* 🚧 Handle swipe with bugs

* 💡 Comment

* 🐛 Forgot one line

* 🐛 Try removing justify content after touch

* 🐛 Test

* 🧹 Remove arrows for Mobile

* 🎨 Preload 2 in advance

* ⚡️ Preload 2 in advance

* 🐛 Go back to 1 preload

* 🐛 Test without justify content

* 🎨 Scroll active creature into view on open

* 💩 Temp setTimeout

* 💩 Preload 2 before

* 💩 Load all previous creatures

* 🧹 Clean up and fix next

* ✨ Do not close CreatureCard on click but add close button

* 💄 Bigger close icon

* 💄 Fix HomeButton color

* 🐛 Fix Safari showModal

* 💩 Fix scroll to active div

--- a/src/components/Learn/Details/AvatarDetails.module.scss
+++ b/src/components/Learn/Details/AvatarDetails.module.scss
@@ -9,5 +9,17 @@ div.avatar-details {
     flex-direction: column;
     &.creature-card {
         height: 100%;
+        min-width: 100%;
+        > button.close-button {
+            position: absolute;
+            right: 6px;
+            top: 12px;
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    div.avatar-details.creature-card {
+        scroll-snap-align: start;
     }
 }
