--- a/src/components/Learn/CreatureCard/CreatureCard.module.scss
+++ b/src/components/Learn/CreatureCard/CreatureCard.module.scss
@@ -1,3 +1,20 @@
-.creature-card {
+dialog.creature-card-modal-dialog {
     border-radius: 24px;
+    div.creature-card-wrapper {
+        height: 100%;
+        display: flex;
+        position: relative;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    dialog.creature-card-modal-dialog {
+        overflow-x: auto !important;
+        scroll-snap-type: x mandatory;
+        -ms-overflow-style: none; /* Internet Explorer 10+ */
+        scrollbar-width: none; /* Firefox */
+        &::-webkit-scrollbar {
+            display: none; /* Safari and Chrome */
+        }
+    }
 }
