✨ Add Explanation notif on Home page

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -10,6 +10,7 @@
     --color-primary-4: #f27059;
     --color-primary-5: #f25c54; // also used for error
     --color-toast-success: #5da271; // not used in CSS but keep as reference
+    --color-logo-light: #feefc6;
 
     // FONT SIZE
     --font-size-small: 12px;
