🎨 Display Explanation after all images loaded

--- a/src/colors.scss
+++ b/src/colors.scss
@@ -4,11 +4,8 @@
     --color-grey: #676767;
     --color-medium-grey: #dbdbdb;
     --color-light-grey: #f0f1f0;
-    --color-primary-1: #ffe7ce;
-    --color-primary-2: #f79d65;
-    --color-primary-3: #f4845f;
-    --color-primary-4: #f27059;
-    --color-primary-5: #f25c54; // also used for error
+    --color-warning: #f79d65;
+    --color-error: #f25c54;
     --color-toast-success: #5da271; // not used in CSS but keep as reference
     --color-logo-light: #feefc6;
 
