--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -1,13 +1,34 @@
 div.home {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100dvh;
+    > img.logo {
+        width: 70%;
+        max-width: 200px;
+        position: absolute;
+        top: 24px;
+        left: 24px;
+    }
     > div.options-container {
         margin: auto;
-        height: 80vh;
-        width: 80%;
+        height: 100%;
+        width: calc(100% - 48px);
         display: flex;
+        justify-content: center;
+        gap: 24px;
+        > div.option-container {
+            flex: 1;
+            align-items: center;
+            &.learn-container {
+                display: flex;
+                flex-direction: column;
+                > div.placeholder {
+                    flex: 1;
+                }
+            }
+        }
     }
 }
 
