--- a/src/components/Home/HomeOption.module.scss
+++ b/src/components/Home/HomeOption.module.scss
@@ -2,27 +2,40 @@
 
 a.home-option {
     flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 24px;
-    text-transform: uppercase;
-    font-size: var(--font-size-xxlarge);
-    &:first-child {
-        border: solid 2px var(--color-logo-light);
-        border-right: none;
-        border-radius: 16px 0 0 16px;
+    width: 80%;
+    max-width: 500px;
+    padding: 24px;
+    box-sizing: border-box;
+    > h2 {
+        text-transform: uppercase;
+        font-size: var(--font-size-xxlarge);
+        margin-block: 0;
+        margin-block-end: 24px;
     }
-    &:nth-child(2) {
+    > p {
+        margin-block: 0;
+        margin-block-end: 24px;
+        font-size: var(--font-size-xlarge);
+    }
+    &:nth-child(even) {
+        border: solid 2px var(--color-logo-light);
+        border-radius: 30% 30% 0 0;
+        border-bottom: none;
+    }
+    &:nth-child(odd) {
         background-color: var(--color-logo-light);
-        border-radius: 0 16px 16px 0;
+        border-radius: 0 0 30% 30%;
     }
     div.image-container {
         @include background-image-component;
         background-color: transparent;
         width: 50%;
         height: 30vh;
+        margin: auto;
+        margin-bottom: 48px;
+    }
+    div.expandable {
+        transition: height 0.4s ease-in-out;
     }
 }
 
