--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -17,16 +17,19 @@ div.home {
         width: calc(100% - 48px);
         display: flex;
         justify-content: center;
-        gap: 24px;
+        gap: 60px;
         > div.option-container {
             flex: 1;
-            align-items: center;
-            &.learn-container {
-                display: flex;
-                flex-direction: column;
-                > div.placeholder {
-                    flex: 1;
-                }
+            display: flex;
+            flex-direction: column;
+            > div.placeholder {
+                flex: 1;
+            }
+            &:nth-child(odd) {
+                align-items: flex-end;
+            }
+            &:nth-child(even) {
+                align-items: flex-start;
             }
         }
     }
@@ -34,8 +37,23 @@ div.home {
 
 @media screen and (max-width: 768px) {
     div.home {
+        > img.logo {
+            position: relative;
+            top: unset;
+            left: unset;
+            margin: auto;
+        }
         > div.options-container {
             flex-direction: column;
+            height: unset;
+            width: 100%;
+            > div.option-container {
+                flex: unset;
+                flex-direction: row;
+                > div.placeholder {
+                    flex: unset;
+                }
+            }
         }
     }
 }
