--- a/src/components/common/BottomNotification/BottomNotification.module.scss
+++ b/src/components/common/BottomNotification/BottomNotification.module.scss
@@ -10,6 +10,9 @@ $leftMargin: 100px;
     display: flex;
     visibility: hidden;
     background-color: transparent;
+    &.with-backdrop {
+        background-color: rgba(0, 0, 0, 0.5);
+    }
     &.is-transitioning,
     &.visible {
         visibility: visible;
@@ -24,6 +27,10 @@ $leftMargin: 100px;
         transition: top 0.2s ease-in;
         padding: 24px;
         border-radius: 24px 24px 0 0;
+        max-height: calc(
+            100dvh - 48px
+        ); // content cannot be higher than the screen - padding, at max height the notification is full screen
+        overflow-y: auto;
 
         &.hidden {
             visibility: hidden;
