--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -3,7 +3,9 @@ div.home {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100dvh;
+    min-height: 100dvh;
+    gap: 24px;
+    padding: 24px 0;
     > img.logo {
         width: 70%;
         max-width: 200px;
