--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,8 +1,13 @@
 footer.footer {
-  display: flex;
-  height: 50px;
-  color: var(--color-light-grey);
-  font-size: 0.8rem;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    height: 50px;
+    color: var(--color-light-grey);
+    font-size: 0.8rem;
+    justify-content: center;
+    align-items: center;
+    &.align-right {
+        position: absolute;
+        bottom: 0;
+        right: 24px;
+    }
 }
