--- a/src/components/Home/HomeMobile.module.scss
+++ b/src/components/Home/HomeMobile.module.scss
@@ -20,49 +20,52 @@ div.home-mobile {
         width: 100%;
         gap: 24px;
         flex: 1;
+        overflow-x: hidden;
         > div.option-container {
-            // flex: 1;
             display: flex;
-            // flex-direction: column;
-            // flex: unset;
-            // flex-direction: row;
             width: 100%;
+            min-height: 220px;
             position: relative;
-            > div.undercover {
-                display: block;
-                position: absolute;
-                top: 0;
-                left: 0;
-                bottom: 0;
-                width: 50px;
-                background-color: var(--color-logo-light);
-                z-index: -1;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                &.reverse {
-                    background-color: var(--bg);
-                    right: 0;
-                    left: unset;
-                    border-top: solid 2px var(--color-logo-light);
-                    border-bottom: solid 2px var(--color-logo-light);
-                }
+            align-items: stretch;
+            transition: margin-left 0.4s ease-in-out;
+            overflow-x: auto;
+            scroll-snap-type: x mandatory;
+            -ms-overflow-style: none; /* Internet Explorer 10+ */
+            scrollbar-width: none; /* Firefox */
+            &::-webkit-scrollbar {
+                display: none; /* Safari and Chrome */
             }
-            > div.placeholder {
-                transition: width 0.4s ease-in-out;
-                align-self: stretch;
-                background-color: transparent;
-                &:nth-child(odd) {
-                    border-top: solid 2px var(--color-logo-light);
-                    border-bottom: solid 2px var(--color-logo-light);
+            > div.option-content {
+                display: flex;
+                position: absolute;
+                transition:
+                    left 0.4s ease-in-out,
+                    right 0.4s ease-in-out;
+                div.undercover {
+                    display: block;
+                    width: 50px;
+                    background-color: var(--color-logo-light);
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    &.reverse {
+                        background-color: var(--bg);
+                        right: 0;
+                        left: unset;
+                        border-top: solid 2px var(--color-logo-light);
+                        border-bottom: solid 2px var(--color-logo-light);
+                    }
                 }
             }
             &:nth-child(odd) {
-                align-items: flex-end;
+                > div.option-content {
+                    left: -50px;
+                }
             }
             &:nth-child(even) {
-                align-items: flex-start;
-                justify-content: flex-end;
+                > div.option-content {
+                    right: -50px;
+                }
             }
         }
     }
