--- a/src/components/Home/HomeMobile.module.scss
+++ b/src/components/Home/HomeMobile.module.scss
@@ -2,7 +2,6 @@ div.home-mobile {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     min-height: 100dvh;
     padding: 24px 0 0;
     gap: 0;
@@ -14,8 +13,8 @@ div.home-mobile {
     }
     > div.options-container {
         margin: 0 auto;
+        margin-top: 24px;
         display: flex;
-        justify-content: center;
         flex-direction: column;
         width: 100%;
         gap: 24px;
@@ -26,7 +25,6 @@ div.home-mobile {
             width: 100%;
             min-height: 220px;
             position: relative;
-            align-items: stretch;
             transition: margin-left 0.4s ease-in-out;
             overflow-x: auto;
             scroll-snap-type: x mandatory;
