✨ Make Learn swipable !

--- a/src/components/Home/HomeMobile.module.scss
+++ b/src/components/Home/HomeMobile.module.scss
@@ -56,6 +56,7 @@ div.home-mobile {
                 }
             }
             &:nth-child(odd) {
+                direction: rtl;
                 > div.option-content {
                     left: -50px;
                 }
